home page full ready

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
 <head>
 <meta charset="utf-8">
 <title>Template</title>
-<link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
 <link href="{% static 'css/style.css' %}" rel="stylesheet">
+<link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
 <link href="{% static 'css/responsive.css' %}" rel="stylesheet">
 <link rel="stylesheet" href="{% static 'css/animate.css' %}">
 <link rel="stylesheet" href="{% static 'css/animation.css' %}">
@@ -180,18 +180,18 @@
 				<!-- Image Column -->
 				<div class="image-column col-lg-6 col-md-12 col-sm-12">
 					<div class="inner-column">
-						<div class="pattern-layer-one" style="background-image: url(images/main-slider/pattern-1.png)"></div>
-						<div class="pattern-layer-two" style="background-image: url(images/main-slider/pattern-2.png)"></div>
-						<div class="pattern-layer-three" style="background-image: url(images/main-slider/icon-1.png)"></div>
-						<div class="pattern-layer-four" style="background-image: url(images/main-slider/pattern-3.png)"></div>
-						<div class="pattern-layer-five" style="background-image: url(images/main-slider/icon-2.png)"></div>
+						<div class="pattern-layer-one"></div>
+						<div class="pattern-layer-two" ></div>
+						<div class="pattern-layer-three"></div>
+						<div class="pattern-layer-four"></div>
+						<div class="pattern-layer-five"></div>
 						<div class="image">
 							<img src="{% static 'images/main-slider/image-1.png' %}" alt="" />
 						</div>
 						<div class="image-two">
 							<img src="{% static 'images/main-slider/image-4.png' %}" alt="" />
 						</div>
-						<div class="image-content" style="background-image: url(images/main-slider/pattern-6.png)">
+						<div class="image-content">
 							<p>87% of people <br> learning</p>
 						</div>
 					</div>
@@ -215,9 +215,9 @@
 	
 	<!-- Instructor Section -->
 	<section class="instructor-section">
-		<div class="background-layer" style="background-image:url(images/background/1.png)"></div>
-		<div class="background-layer-one" style="background-image:url(images/background/pattern-1.png)"></div>
-		<div class="background-layer-two" style="background-image:url(images/background/pattern-2.png)"></div>
+		<div class="background-layer"></div>
+		<div class="background-layer-one"></div>
+		<div class="background-layer-two"></div>
 		<div class="auto-container">
 			<div class="row clearfix">
 				
@@ -272,14 +272,14 @@
 	
 	<!-- Benefit Section -->
 	<section class="benefit-section">
-		<div class="background-layer-one" style="background-image:url(images/background/pattern-5.png)"></div>
-		<div class="background-layer-two" style="background-image:url(images/background/pattern-6.png)"></div>
+		<div class="background-layer-one"></div>
+		<div class="background-layer-two"></div>
 		<div class="auto-container">
 			<div class="row clearfix">
 				<div class="images-column col-lg-7 col-md-12 col-sm-12">
 					<div class="inner-column">
-						<div class="pattern-layer" style="background-image:url(images/background/pattern-3.png)"></div>
-						<div class="pattern-layer-two" style="background-image:url(images/background/pattern-4.png)"></div>
+						<div class="pattern-layer"></div>
+						<div class="pattern-layer-two"></div>
 						<div class="color-layer"></div>
 						<div class="image">
 							<img src="{% static 'images/resource/benefit-1.jpg' %}" alt="" />
@@ -319,7 +319,7 @@
 	
 	<!-- Feature Section -->
 	<section class="feature-section">
-		<div class="pattern-layer" style="background-image:url(images/background/pattern-7.png)"></div>
+		<div class="pattern-layer"></div>
 		<div class="auto-container">
 			<div class="row clearfix">
 				<div class="content-column col-lg-7 col-md-12 col-sm-12">
@@ -364,7 +364,7 @@
 	
 	<!-- Courses Section -->
 	<section class="courses-section">
-		<div class="pattern-layer" style="background-image:url(images/background/pattern-2.png)"></div>
+		<div class="pattern-layer"></div>
 		<div class="circle-one paroller" data-paroller-factor="-0.20" data-paroller-factor-lg="0.20" data-paroller-type="foreground" data-paroller-direction="horizontal"></div>
 		<div class="circle-two paroller" data-paroller-factor="0.20" data-paroller-factor-lg="-0.20" data-paroller-type="foreground" data-paroller-direction="horizontal"></div>
 		<div class="auto-container">
@@ -508,7 +508,7 @@
 	
 	<!-- Skill Section -->
 	<section class="skill-section">
-		<div class="pattern-layer" style="background-image:url(images/background/pattern-8.png)"></div>
+		<div class="pattern-layer"></div>
 		<div class="auto-container">
 			<div class="row clearfix">
 				
@@ -585,10 +585,10 @@
 	<section class="testimonial-section">
 		<div class="circle-one paroller" data-paroller-factor="-0.20" data-paroller-factor-lg="0.20" data-paroller-type="foreground" data-paroller-direction="horizontal"></div>
 		<div class="circle-two paroller" data-paroller-factor="0.20" data-paroller-factor-lg="-0.20" data-paroller-type="foreground" data-paroller-direction="horizontal"></div>
-		<div class="pattern-layer-two" style="background-image:url(images/background/pattern-10.png)"></div>
+		<div class="pattern-layer-two"></div>
 		<div class="auto-container">
 			<div class="inner-container">
-				<div class="pattern-layer" style="background-image:url(images/background/pattern-9.png)"></div>
+				<div class="pattern-layer"></div>
 				<!-- Sec Title -->
 				<div class="sec-title centered">
 					<div class="title">Testimonial</div>
@@ -695,7 +695,7 @@
 	
 	<!-- News Section -->
 	<section class="news-section">
-		<div class="pattern-layer" style="background-image:url(images/background/pattern-11.png)"></div>
+		<div class="pattern-layer"></div>
 		<div class="auto-container">
 			<!-- Sec Title -->
 			<div class="sec-title centered">
@@ -704,9 +704,9 @@
 				<div class="text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu <br> fugiat nulla pariatur Duis aute irure dolor in reprehenderit in</div>
 			</div>
 			<div class="inner-container">
-				<div class="icon-layer-one" style="background-image:url(images/icons/icon-1.png)"></div>
-				<div class="icon-layer-two" style="background-image:url(images/icons/icon-2.png)"></div>
-				<div class="icon-layer-three" style="background-image:url(images/icons/icon-2.png)"></div>
+				<div class="icon-layer-one"></div>
+				<div class="icon-layer-two"></div>
+				<div class="icon-layer-three"></div>
 				<div class="row clearfix">
 				
 					<!-- News Block -->
@@ -781,10 +781,10 @@
 	<!-- Main Footer -->
     <footer class="main-footer">
 		<div class="circle-layer"></div>
-		<div class="pattern-layer-one" style="background-image: url({% static 'images/background/pattern-12.png' %})"></div>
-		<div class="pattern-layer-two" style="background-image: url({% static 'images/background/pattern-13.png' %})"></div>
-		<div class="pattern-layer-three" style="background-image: url({% static 'images/background/pattern-14.png' %})"></div>
-		<div class="pattern-layer-four" style="background-image: url({% static 'images/background/pattern-13.png' %})"></div>
+		<div class="pattern-layer-one"></div>
+		<div class="pattern-layer-two"></div>
+		<div class="pattern-layer-three"></div>
+		<div class="pattern-layer-four"></div>
     	<div class="auto-container">
         	<!--Widgets Section-->
             <div class="widgets-section">
