--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2121,6 +2121,7 @@ img{
     -webkit-transition: all 900ms ease;
     -ms-transition: all 900ms ease;
     -o-transition: all 900ms ease;
+	background-image: url("/static/images/main-slider/pattern-1.png");
 }
 
 .banner-section .image-column .pattern-layer-two{
@@ -2135,6 +2136,7 @@ img{
     -webkit-transition: all 900ms ease;
     -ms-transition: all 900ms ease;
     -o-transition: all 900ms ease;
+	background-image: url("/static/images/main-slider/pattern-2.png")
 }
 
 .banner-section .image-column .pattern-layer-three{
@@ -2149,6 +2151,7 @@ img{
     -webkit-transition: all 900ms ease;
     -ms-transition: all 900ms ease;
     -o-transition: all 900ms ease;
+	background-image: url("/static/images/main-slider/icon-1.png")
 }
 
 .banner-section .image-column .pattern-layer-four{
@@ -2162,6 +2165,7 @@ img{
     -webkit-transition: all 900ms ease;
     -ms-transition: all 900ms ease;
     -o-transition: all 900ms ease;
+	background-image: url("/static/images/main-slider/pattern-3.png")
 }
 
 .banner-section .image-column .pattern-layer-five{
@@ -2176,6 +2180,7 @@ img{
     -webkit-transition: all 900ms ease;
     -ms-transition: all 900ms ease;
     -o-transition: all 900ms ease;
+	background-image: url("/static/images/main-slider/icon-2.png")
 }
 
 .banner-section .pattern-layer-six{
@@ -2193,7 +2198,7 @@ img{
     -webkit-transition: all 900ms ease;
     -ms-transition: all 900ms ease;
 	-o-transition: all 900ms ease;
-	background-image: url("{% static 'images/main-slider/pattern-4.png'}");
+	background-image: url("/static/images/main-slider/pattern-4.png");
 }
 
 .banner-section .pattern-layer-seven{
@@ -2211,7 +2216,7 @@ img{
     -webkit-transition: all 900ms ease;
     -ms-transition: all 900ms ease;
 	-o-transition: all 900ms ease;
-	background-image: url("{% static 'images/main-slider/pattern-5.png' %}")
+	background-image: url("/static/images/main-slider/pattern-5.png")
 }
 
 .banner-section .pattern-layer-eight{
@@ -2229,7 +2234,7 @@ img{
     -webkit-transition: all 900ms ease;
     -ms-transition: all 900ms ease;
 	-o-transition: all 900ms ease;
-	background-image: url("{% static 'images/main-slider/icon-2.png' %}")
+	background-image: url("/static/images/main-slider/icon-2.png")
 }
 
 .banner-section .image-column .image-two{
@@ -2263,6 +2268,7 @@ img{
 	height:224px;
 	padding-top:90px;
 	background-repeat:no-repeat;
+	background-image: url("/static/images/main-slider/pattern-6.png")
 }
 
 .banner-section .image-column .image-content p{
@@ -2437,6 +2443,7 @@ img{
 	height:100%;
 	background-position:center top;
 	background-repeat:repeat-x;
+	background-image:url("/static/images/background/1.png")
 }
 
 .instructor-section .background-layer-one{
@@ -2447,6 +2454,7 @@ img{
 	height:120px;
 	background-position:center top;
 	background-repeat:repeat-x;
+	background-image:url("/static/images/background/pattern-1.png/")
 }
 
 .instructor-section .background-layer-two{
@@ -2457,6 +2465,7 @@ img{
 	height:416px;
 	background-position:center top;
 	background-repeat:repeat-x;
+	background-image:url("/static/images/background/pattern-2.png")
 }
 
 .instructor-section .blocks-column{
@@ -2697,6 +2706,7 @@ img{
 	width:606px;
 	height:343px;
 	background-repeat:no-repeat;
+	background-image:url("/static/images/background/pattern-5.png")
 }
 
 .benefit-section .background-layer-two{
@@ -2706,6 +2716,7 @@ img{
 	width:774px;
 	height:416px;
 	background-repeat:no-repeat;
+	background-image:url("/static/images/background/pattern-6.png")
 }
 
 .benefit-section .images-column{
@@ -2737,6 +2748,7 @@ img{
 	width:241px;
 	height:388px;
 	background-repeat:no-repeat;
+	background-image:url("/static/images/background/pattern-3.png")
 }
 
 .benefit-section .images-column .inner-column .pattern-layer-two{
@@ -2746,6 +2758,7 @@ img{
 	width:241px;
 	height:388px;
 	background-repeat:no-repeat;
+	background-image:url("/static/images/background/pattern-4.png")
 }
 
 .benefit-section .images-column .image{
@@ -2888,6 +2901,7 @@ img{
 	width:954px;
 	height:505px;
 	background-repeat:no-repeat;
+	background-image:url("/static/images/background/pattern-7.png")
 }
 
 .feature-section .image-column .image h2{
@@ -2934,6 +2948,7 @@ img{
 	bottom:450px;
 	width:774px;
 	height:416px;
+	background-image:url("/static/images/background/pattern-2.png")
 }
 
 .courses-section .circle-one{
@@ -3399,6 +3414,7 @@ img{
 	top:60px;
 	width:100%;
 	height:654px;
+	background-image:url("/static/images/background/pattern-8.png")
 }
 
 .skill-section .skill-column{
@@ -3569,6 +3585,7 @@ img{
 	width:446px;
 	height:406px;
 	background-repeat:no-repeat;
+	background-image:url("/staic/images/background/pattern-10.png")
 }
 
 .testimonial-section .inner-container{
@@ -3583,6 +3600,7 @@ img{
 	height:519px;
 	background-position:center top;
 	background-repeat:no-repeat;
+	background-image:url("/static/images/background/pattern-9.png")
 }
 
 .testimonial-section .owl-carousel .owl-stage-outer{
@@ -3743,6 +3761,7 @@ img{
 	width:100%;
 	height:643px;
 	background-repeat:no-repeat;
+	background-image:url("/static/images/background/pattern-11.png")
 }
 
 .news-section .inner-container{
@@ -3756,6 +3775,7 @@ img{
 	width:160px;
 	height:133px;
 	background-repeat:no-repeat;
+	background-image:url("/static/images/icons/icon-1.png")
 }
 
 .news-section .icon-layer-two{
@@ -3765,6 +3785,7 @@ img{
 	width:69px;
 	height:69px;
 	background-repeat:no-repeat;
+	background-image:url("/static/images/icons/icon-2.png")
 }
 
 .news-section .icon-layer-three{
@@ -3775,6 +3796,7 @@ img{
 	height:69px;
 	opacity:0.5;
 	background-repeat:no-repeat;
+	background-image:url("/static/images/icons/icon-2.png")
 }
 
 .news-block{
@@ -3998,6 +4020,7 @@ img{
 	width:256px;
 	height:392px;
 	background-repeat:no-repeat;
+	background-image: url('/static/images/background/pattern-12.png')
 }
 
 .main-footer .pattern-layer-two{
@@ -4008,6 +4031,7 @@ img{
 	height:69px;
 	background-position:center top;
 	background-repeat:no-repeat;
+	background-image: url("/static/images/background/pattern-13.png")
 }
 
 .main-footer .pattern-layer-three{
@@ -4017,6 +4041,7 @@ img{
 	width:292px;
 	height:120px;
 	background-repeat:no-repeat;
+	background-image: url("/static/images/background/pattern-14.png")
 }
 
 .main-footer .pattern-layer-four{
@@ -4027,6 +4052,7 @@ img{
 	height:69px;
 	background-position:center top;
 	background-repeat:no-repeat;
+	background-image: url("/static/images/background/pattern-13.png")
 }
 
 .main-footer .footer-widget{
