--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -19,7 +19,7 @@
 	}
 	
 	.main-menu .navigation > li{
-		margin-right:20px;
+		margin-right: 0px;
 	}
 	
 	.header-style-two .main-menu{
@@ -62,10 +62,6 @@
 	
 	.main-slider{
 		padding:0px 0px;
-	}
-	
-	h1{
-		font-size:42px;
 	}
 	
 	.banner-section .slide{
@@ -473,6 +469,22 @@
 }
 
 @media only screen and (max-width: 767px){
+	.main-header .header-upper .logo-box+a{right: 73px; display: block!important;}
+	section#counter-stats{padding: 0;}
+	.sign_up {
+    	padding: 2px 12px 4px!important;
+    	font-size: 16px;
+	}
+	footer .column{padding-left: 15px!important;}
+	.main-header .header-upper .logo-box a img{width: 170px;}
+	.banner-section .content-column .title{margin-top: 20px!important;}
+	.mobile-menu .navigation li+a.sign_up{display: none;}
+	.main-header .header-upper .logo-box .logo{text-align: left; padding: 0 0 8px;}
+	.banRt ul li{margin: 15px;}
+	.news-block .inner-box .lower-content .post-info li{font-size: 13px;}
+	h1{font-size: 30px;}
+	#counter-stats div h2+div{display: block!important;}
+	.stats{margin-bottom: 25px;}
 	.main-footer .pattern-layer-four{display: none;}
 	.main-footer .pattern-layer-one{display: none;}
 	.benefit-section .background-layer-two{left: -377px;
@@ -761,7 +773,10 @@
 	}
 	
 	.main-header .nav-outer{
-		width:100%;
+		display: inline-block;
+    position: absolute;
+    top: 2px;
+    right: 15px;
 	}
 	
 	.main-menu .cart-box{
@@ -827,10 +842,6 @@
 	.main-header .sticky-header .outer-box .cart-box .cart-panel{
 		right:0px !important;
 		left:auto !important;
-	}
-	
-	h1{
-		font-size:36px;
 	}
 	
 	.page-title h2,
@@ -1043,14 +1054,6 @@
 		line-height:1.4em;
 	}
 	
-	.error-section .content h1{
-		margin-top:-180px;
-	}
-	
-	.error-section .content h1{
-		font-size:120px;
-	}
-	
 	.contact-page-section .info-column h2{
 		font-size:30px;
 		line-height:1.4em;
@@ -1063,15 +1066,6 @@
 }
 
 @media only screen and (max-width: 479px) {
-	
-	h1{
-		font-size:24px;
-		line-height:1.4em;
-	}
-	
-	h2{
-		font-size:22px;
-	}
 	
 	.list-style-one li strong{
 		font-size:22px;
@@ -1167,10 +1161,6 @@
 		width:100%;
 		text-align:center;
 		margin-bottom:8px;
-	}
-	
-	.error-section .content h1{
-		margin-top:0px;
 	}
 	
 	.error-section .content h3{
