--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Template</title>
+<title>Online Homework Help - 24x7 Homework Help from TutorChamps.com</title>
 <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
 <link href="{% static 'css/style.css' %}" rel="stylesheet">
 <link href="{% static 'css/responsive.css' %}" rel="stylesheet">
@@ -12,6 +12,7 @@
 
 <link rel="shortcut icon" href="{% static 'images/favicon.png' %}" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+<meta name="description" content="Are you struggling with homework writing? Try Tutor Champs and Get the best online homework help solution from expert tutors. Get Solution Now!">
 </head>
 
 <body class="hidden-bar-wrapper">
