blog page added

--- a/templates/index.html
+++ b/templates/index.html
@@ -94,7 +94,7 @@
 										<li><a href="">On Time delivery</a></li>
 									</ul>
 								</li>
-								<li><a href="">Blog</a></li>
+								<li><a href="{% url 'blog' %}">Blog</a></li>
 								<li><a href="">Reviews</a></li>
 								<a href="" class="theme-btn sign_up btn-style-three">Sign Up</a>
 
