--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
+{% load static %}
 <html>
 <head>
 <meta charset="utf-8">
 <title>LeBari Education HTML-5 Template | Blog</title>
 <!-- Stylesheets -->
-<link href="css/bootstrap.css" rel="stylesheet">
-<link href="css/style.css" rel="stylesheet">
-<link href="css/responsive.css" rel="stylesheet">
+<link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+<link href="{% static 'css/style.css' %}" rel="stylesheet">
+<link href="{% static 'css/responsive.css' %}" rel="stylesheet">
 
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&amp;display=swap" rel="stylesheet">
 
-<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-<link rel="icon" href="images/favicon.png" type="image/x-icon">
+<link rel="shortcut icon" href="{% static 'images/favicon.png' %}" type="image/x-icon">
+<link rel="icon" href="{% static 'images/favicon.png '%}" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 </head>
 
@@ -37,7 +38,7 @@
         <div class="header-upper">
         	<div class="auto-container clearfix">            	
 				<div class="pull-left logo-box">
-					<div class="logo"><a href="index.html"><img src="images/logo.png" alt="" title=""></a></div>
+					<div class="logo"><a href="index.html"><img src="{% static 'images/logo.png' %}" alt="" title=""></a></div>
 				</div>	
 				<a href="" style="display: none;" class="theme-btn sign_up btn-style-three">Sign Up</a>
 
@@ -107,7 +108,7 @@
         <div class="sticky-header">
             <div class="auto-container clearfix">
                 <div class="logo pull-left">
-                    <a href="index.html" title=""><img src="images/logo.png" alt="" title=""></a>
+                    <a href="index.html" title=""><img src="{% static 'images/logo.png' %}" alt="" title=""></a>
                 </div>
                 <div class="pull-right">
                     <nav class="main-menu">
@@ -126,7 +127,7 @@
             <div class="close-btn"><span class="icon flaticon-multiply"></span></div>
             
             <nav class="menu-box">
-                <div class="nav-logo"><a href=""><img src="images/logo.png" alt="" title=""></a></div>
+                <div class="nav-logo"><a href=""><img src="{% static 'images/logo.png' %}" alt="" title=""></a></div>
 
                 <div class="menu-outer"></div>
             </nav>
@@ -151,7 +152,7 @@
 					<div class="sidebar-info-contents">
 						<div class="content-inner">
 							<div class="logo">
-								<a href="index-2.html"><img src="images/logo-2.png" alt="" /></a>
+								<a href="index-2.html"><img src="{% static 'images/logo-2.png' %}" alt="" /></a>
 							</div>
 							<div class="content-box">
 								<h2>About Us</h2>
@@ -186,9 +187,9 @@
 	
 	<!-- Blog Detail Section -->
     <section class="blog-page-section">
-		<div class="pattern-layer-one" style="background-image: url(images/icons/icon-5.png)"></div>
-		<div class="pattern-layer-two" style="background-image: url(images/icons/icon-6.png)"></div>
-		<div class="pattern-layer-three" style="background-image: url(images/icons/icon-4.png)"></div>
+		<div class="pattern-layer-one" style="background-image: url('/static/images/icons/icon-5.png')"></div>
+		<div class="pattern-layer-two" style="background-image: url('/static/images/icons/icon-6.png')"></div>
+		<div class="pattern-layer-three" style="background-image: url('/static/images/icons/icon-4.png')"></div>
 		<div class="auto-container">
 			<!-- Page Breadcrumb -->
 			<ul class="page-breadcrumb">
@@ -207,7 +208,7 @@
 				<div class="news-block style-two col-lg-4 col-md-6 col-sm-12">
 					<div class="inner-box">
 						<div class="image">
-							<a href="blog-detail.html"><img src="images/resource/news-6.jpg" alt="" /></a>
+							<a href="blog-detail.html"><img src="{% static 'images/resource/news-6.jpg' %}" alt="" /></a>
 						</div>
 						<div class="lower-content">
 							<div class="border-layer"></div>
@@ -225,7 +226,7 @@
 				<div class="news-block style-two col-lg-4 col-md-6 col-sm-12">
 					<div class="inner-box">
 						<div class="image">
-							<a href="blog-detail.html"><img src="images/resource/news-7.jpg" alt="" /></a>
+							<a href="blog-detail.html"><img src="{% static 'images/resource/news-7.jpg" alt="" /></a>
 						</div>
 						<div class="lower-content">
 							<div class="border-layer"></div>
@@ -243,7 +244,7 @@
 				<div class="news-block style-two col-lg-4 col-md-6 col-sm-12">
 					<div class="inner-box">
 						<div class="image">
-							<a href="blog-detail.html"><img src="images/resource/news-8.jpg" alt="" /></a>
+							<a href="blog-detail.html"><img src="{% static 'images/resource/news-8.jpg' %}" alt="" /></a>
 						</div>
 						<div class="lower-content">
 							<div class="border-layer"></div>
@@ -261,7 +262,7 @@
 				<div class="news-block style-two col-lg-4 col-md-6 col-sm-12">
 					<div class="inner-box">
 						<div class="image">
-							<a href="blog-detail.html"><img src="images/resource/news-9.jpg" alt="" /></a>
+							<a href="blog-detail.html"><img src="{% static 'images/resource/news-9.jpg" alt="" /></a>
 						</div>
 						<div class="lower-content">
 							<div class="border-layer"></div>
@@ -279,7 +280,7 @@
 				<div class="news-block style-two col-lg-4 col-md-6 col-sm-12">
 					<div class="inner-box">
 						<div class="image">
-							<a href="blog-detail.html"><img src="images/resource/news-10.jpg" alt="" /></a>
+							<a href="blog-detail.html"><img src="{% static 'images/resource/news-10.jpg' %}" alt="" /></a>
 						</div>
 						<div class="lower-content">
 							<div class="border-layer"></div>
@@ -297,7 +298,7 @@
 				<div class="news-block style-two col-lg-4 col-md-6 col-sm-12">
 					<div class="inner-box">
 						<div class="image">
-							<a href="blog-detail.html"><img src="images/resource/news-11.jpg" alt="" /></a>
+							<a href="blog-detail.html"><img src="{% static 'images/resource/news-11.jpg" alt="" /></a>
 						</div>
 						<div class="lower-content">
 							<div class="border-layer"></div>
@@ -323,10 +324,10 @@
 	
 	<footer class="main-footer">
 		<div class="circle-layer"></div>
-		<div class="pattern-layer-one" style="background-image: url(images/background/pattern-12.png)"></div>
-		<div class="pattern-layer-two" style="background-image: url(images/background/pattern-13.png)"></div>
-		<div class="pattern-layer-three" style="background-image: url(images/background/pattern-14.png)"></div>
-		<div class="pattern-layer-four" style="background-image: url(images/background/pattern-13.png)"></div>
+		<div class="pattern-layer-one" style="background-image: url('/static/images/background/pattern-12.png')"></div>
+		<div class="pattern-layer-two" style="background-image: url('/static/images/background/pattern-13.png')"></div>
+		<div class="pattern-layer-three" style="background-image: url('/static/images/background/pattern-14.png')"></div>
+		<div class="pattern-layer-four" style="background-image: url('/static/images/background/pattern-13.png')"></div>
     	<div class="auto-container">
         	<!--Widgets Section-->
             <div class="widgets-section">
@@ -406,7 +407,7 @@
 								<li class="twitter"><a target="_blank" href="http://twitter.com/" class="fa fa-twitter"></a></li>
 								<li class="pinterest"><a target="_blank" href="http://pinterest.com/" class="fa fa-pinterest-p"></a></li>
 								<li class="facebook"><a target="_blank" href="http://facebook.com/" class="fa fa-facebook-f"></a></li>
-								<li class="dribbble"><a target="_blank" href="https://instagram.com/" class="fa fa-instagram"><img src="images/instagram.png"> </a></li>
+								<li class="dribbble"><a target="_blank" href="https://instagram.com/" class="fa fa-instagram"><img src="{% static 'images/instagram.png' %}"> </a></li>
 							</ul>
 					</div>
 					
@@ -422,20 +423,20 @@
 <!--Scroll to top-->
 <div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-arrow-up"></span></div>
 
-<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="js/jquery.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-<script src="js/jquery.fancybox.js"></script>
-<script src="js/appear.js"></script>
-<script src="js/parallax.min.js"></script>
-<script src="js/tilt.jquery.min.js"></script>
-<script src="js/jquery.paroller.min.js"></script>
-<script src="js/owl.js"></script>
-<script src="js/wow.js"></script>
-<script src="js/nav-tool.js"></script>
-<script src="js/jquery-ui.js"></script>
-<script src="js/script.js"></script>
+<script data-cfasync="false" src="{% static '../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js' %}"></script><script src="{% static 'js/jquery.js' %}"></script>
+<script src="{% static 'js/popper.min.js' %}"></script>
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
+<script src="{% static 'js/jquery.mCustomScrollbar.concat.min.js' %}"></script>
+<script src="{% static 'js/jquery.fancybox.js' %}"></script>
+<script src="{% static 'js/appear.js' %}"></script>
+<script src="{% static 'js/parallax.min.js' %}"></script>
+<script src="{% static 'js/tilt.jquery.min.js' %}"></script>
+<script src="{% static 'js/jquery.paroller.min.js' %}"></script>
+<script src="{% static 'js/owl.js' %}"></script>
+<script src="{% static 'js/wow.js' %}"></script>
+<script src="{% static 'js/nav-tool.js' %}"></script>
+<script src="{% static 'js/jquery-ui.js' %}"></script>
+<script src="{% static 'js/script.js' %}"></script>
 
 </body>
 
