--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,9 @@
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
     <link href="{% static 'css/responsive.css' %}" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&amp;display=swap" rel="stylesheet">
+    
+    <link rel="shortcut icon" href="{% static 'images/favicon.png' %}" type="image/x-icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 {% block meta %}
   
 {% endblock meta %}
@@ -21,6 +24,9 @@
     {% block body %}
       
     {% endblock body %}
+
+
+    
 
     <!-- <script data-cfasync="false"
 		src="{% static '../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js' %}"></script> -->
