--- a/templates/blog.html
+++ b/templates/blog.html
@@ -17,8 +17,7 @@
 
 
 {% block body %}
-  
-`	<div class="page-wrapper">
+  	<div class="page-wrapper">
 
 		<div class="preloader">
 			<div class="mesh-loader">
@@ -464,19 +463,5 @@
 
 	<!--Scroll to top-->
 	<div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-arrow-up"></span></div>
-	<script src="{% static 'js/jquery.js' %}"></script>
-	<script src="{% static 'js/popper.min.js' %}"></script>
-	<script src="{% static 'js/bootstrap.min.js' %}"></script>
-	<script src="{% static 'js/jquery.mCustomScrollbar.concat.min.js' %}"></script>
-	<script src="{% static 'js/jquery.fancybox.js' %}"></script>
-	<script src="{% static 'js/appear.js' %}"></script>
-	<script src="{% static 'js/parallax.min.js' %}"></script>
-	<script src="{% static 'js/tilt.jquery.min.js' %}"></script>
-	<script src="{% static 'js/jquery.paroller.min.js' %}"></script>
-	<script src="{% static 'js/owl.js' %}"></script>
-	<script src="{% static 'js/wow.js' %}"></script>
-	<script src="{% static 'js/nav-tool.js' %}"></script>
-	<script src="{% static 'js/jquery-ui.js' %}"></script>
-	<script src="{% static 'js/script.js' %}"></script>
 
 {% endblock body %}
