--- a/static/css/style.css
+++ b/static/css/style.css
@@ -119,7 +119,8 @@ textarea{
 
 p{
 	position:relative;
-	line-height:1.8em;	
+	line-height:1.8em;
+	font-size: 16px;
 }
 
 /* Typography */
@@ -11198,6 +11199,80 @@ section#counter-stats {
 .banRt ul li:nth-child(4):before{
     background: #f34055;
 }
+.guarantees__icon {
+    width: 80px;
+    height: 80px;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -ms-flex-align: center;
+    align-items: center;
+    background: #fff;
+    box-shadow: 0 10px 20px rgb(0 0 0 / 10%), 0 2px 8px rgb(0 0 0 / 10%);
+    border-radius: 40px;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+.guarantees__subtitle {
+    font-family: Poppins,sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 25px;
+    font-size: 20px;
+    letter-spacing: .15px;
+    color: rgba(0,0,0,.9);
+    margin-bottom: 15px;
+}
+.content_sec ol li{
+    list-style: disc;
+    margin-left: 22px;
+    font-size: 20px;
+    font-weight: 600;
+    color: #4c4b4b;
+    margin-bottom: 15px;
+    margin-top: 30px;
+}
+.h_3 {
+    font-size: 24px;
+    color: #353535;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
+.flex_div{display: flex;justify-content: space-between; align-items: center;}
+.title.title-big {
+    line-height: 60px;
+    font-size: 48px;
+    color: #191919;
+    margin-bottom: 40px;
+}
+.h_2{line-height: 57px;
+    margin-bottom: 22px;
+    font-size: 36px;
+    font-weight: 700;
+}
+.getting-more {
+    background: #f3fbf8;
+    padding: 60px 0;
+}
+.quality {
+    background: #f3fbf8;
+    padding: 40px 0 50px;
+    margin-top: 30px;
+}
+.guarantees__text {
+    font-family: Roboto,sans-serif;
+    line-height: 20px;
+    font-size: 16px;
+    letter-spacing: .25px;
+    color: #4a4955;
+}
+.guarantees__item {
+    position: relative;
+    padding: 35px 5px 35px 100px;
+    max-width: 480px;
+}
 .banRt ul li:before {
 	content: "";
     width: 35px;
@@ -11216,3 +11291,173 @@ to{transform:translate(0,0)}
 header li.more:hover > a::before {
     opacity: 0!important;
 }
+.Sbanner {
+    background: url(../images/india-country.jpg);
+    width: 100%;
+    /* min-height: 521px; */
+    background-size: cover;
+    position: relative;
+    background-repeat: no-repeat!important;
+    background-size: cover!important;
+    height: calc(100vh - 88px);
+}
+.Sbanner .__heading h1 {
+    font-size: 30px;
+    padding: 30px 0 0;
+    color: #373737;
+    font-weight: 500;
+    line-height: 1.2;
+}
+
+
+
+
+.Sbanner .__heading h2 {
+    font-size: 18px;
+    font-weight: 400;
+    margin: 0;
+    padding: 0;
+    text-transform: capitalize;
+}
+.Sbanner .__heading h3 {
+    font-size: 15px;
+    color: #29870b;
+    font-weight: 300;
+    font-style: italic;
+    margin: 0;
+    padding: 5px 0 10px;
+    text-transform: capitalize;
+}
+.Sbanner .__form-container {height: 100%;}
+.commForm{
+    background: #fff;
+    border: 1px solid #e9e9e9;
+    padding: 20px 26px 26px;
+    border-radius: 15px;
+    z-index: 9;
+    position: relative;
+}
+.commForm .form_group{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+.commForm .pos_rel{
+    width: 47%;
+    position: relative;
+}
+.commForm .pos_rel label{
+    font-size: 13px;
+    display: block;
+    text-transform: capitalize;
+    color: #383838;
+    margin-bottom: 2px;
+}
+.commForm .pos_rel .input{
+    display: block;
+    padding: 6px 8px;
+    font-size: 14px;
+    border: 1px solid #ccc;
+    width: 100%;
+    outline: none;
+    border-radius: 4px;
+    margin-bottom: 15px;
+}
+.twoField .pos_rel{width: 100%;}
+.twoField{width: 47%;}
+.commForm textarea{
+    resize: initial;
+    width: 100%;
+    height: 116px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 10px;
+}
+.commForm textarea+div label{
+    font-size: 13px!important;
+    display: inline-block!important;
+}
+.commForm textarea+div input:after{content: "";position: absolute;top: 7px;left: 13px;width: 26px;background: url(../images/attach.png);height: 26px;background-repeat: no-repeat;visibility: visible;}
+.commForm textarea+div input:before{content: "Add File";position: absolute;top: 0px;left: 40px;font-size: 14px;visibility: visible;}
+.commForm textarea+div input{
+    width: 36px;
+    height: 20px;
+    display: inline-block;
+    visibility: hidden;
+    cursor: pointer;
+}
+.commForm textarea+div{
+    position: absolute;
+    bottom: 15px;
+    display: flex;
+    align-items: center;
+}
+.commFormBtn{
+    background: #43b97e;
+    color: #fff;
+    display: inline-block;
+    padding: 12px 24px 14px;
+    font-size: 18px;
+    border-radius: 100px;
+}
+.commFormBtn:hover{color: #fff;}
+.SAfter{position: relative;}
+.SAfter:after{content: ""; position: absolute; background: #f0faf5; width: 100%; height: 89%; top: 0;}
+.Sbanner:after{content: "";position: absolute;top: 0;width: 100%;height: 100%;/* background: #0000004d; */z-index: 1;}
+.Sbanner h1 {
+    text-transform: capitalize;
+    padding: 0;
+    font-weight: 600;
+    color: #ffffff;
+    font-size: 42px;
+    line-height: 34px;
+    margin: 0px 0 26px;
+    text-shadow: none;
+}
+.zInd_9{z-index: 9; position: relative;}
+.Sbanner h2 {
+    text-transform: capitalize;
+    padding: 0;
+    font-weight: 400;
+    color: #fff;
+    font-size: 20px;
+    line-height: 30px;
+    margin-bottom: 40px;
+}
+.commForm h2{
+    text-align: center;
+    font-size: 22px;
+    margin-bottom: 25px;
+    color: #43b97e!important;
+    font-weight: 500;
+}
+.commForm ::placeholder{color: #a2a2a2;}
+.dFlex{    display: flex;
+    align-items: center;}
+.getting-more__text{
+    font-size: 16px;
+}
+.ban_container{max-width: 1240px; margin: 0 auto;}
+.row_{height: calc(100vh - 88px);
+    align-items: center;}
+.__icon-container span{
+    font-size: 17px;
+}
+.__icon-container{background: #43b97eb8;
+    padding: 13px;
+    border-radius: 6px;
+    max-width: 550px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
