--- a/templates/base.html
+++ b/templates/base.html
@@ -42,9 +42,7 @@
 				<div class="pull-left logo-box">
 					<div class="logo"><a href=""><img src="{% static 'images/logo.png' %}" alt="" title=""></a></div>
 				</div>	
-				<a href="" style="display: none;" class="theme-btn sign_up btn-style-three">Sign Up</a>
-
-
+				<a href="" style="display: none;" class="theme-btn sign_in btn-style-three">Sign In</a>
 				<div class="nav-outer clearfix">
 					<div class="mobile-nav-toggler"><span class="icon flaticon-menu"></span></div>
 					<nav class="main-menu navbar-expand-md">
