--- a/templates/services.html
+++ b/templates/services.html
@@ -67,7 +67,7 @@
                                 
                                 <div class="pos_rel">
                                     <label>Your Message*</label>
-                                    <textarea name="Details" name="desc" id="description" required class="Detail" placeholder="Write assignment description"></textarea>
+                                    <textarea name="Details"  id="description" required class="Detail" placeholder="Write assignment description"></textarea>
                                     <div>                                    	
                                     	<input type="file" name="file" name="files[]" id="files" multiple="" value="Add File" required>
                                     	
